fix: Horizontal scroll issue all lessons

--- a/app/src/styles/tailwind.css
+++ b/app/src/styles/tailwind.css
@@ -225,7 +225,8 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 }
 
 .container-page {
-  @apply sm:py-4 sm:pl-6 sm:pr-4 py-6 px-5
+  @apply sm:py-4 sm:pl-6 sm:pr-4 py-6 px-5;
+  max-width: 100vw;
 }
 
 [type='number']::-webkit-inner-spin-button,
